objects/Box_Logs__c.object
<CustomObject>
    <description>This object collects logs for BOx integration for salesforce</description>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Box Logs</label>
    <nameField>
        <label>Box Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Box Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>